# GameOfLife

./: .gitignore  CMakeLists.txt  Hello.sln
src/: LifeCicle.cpp  LifeCicle.hpp  main.cpp
src/App/: App.cmake  main.cpp
src/Life/: LifeCicle.cmake  LifeCicle.cpp
